<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lv_you_guan_li">驴友管理</string>
    <string name="wan_cheng">完成</string>
    <string name="deng_dai_dui_fang_yan_zheng">等待对方验证</string>
    <string name="geng_duo_zi_liao">更多资料</string>
    <string name="geng_duo_zi_liao_ni_cheng">昵称</string>
    <string name="geng_duo_zi_liao_ni_cheng_one">Many</string>
    <string name="geng_duo_zi_liao_xing_bie">女</string>
    <string name="geng_duo_zi_liao_xing_bie_one">性别</string>
    <string name="geng_duo_zi_liao_nian_ling">年龄</string>
    <string name="geng_duo_zi_liao_nian_ling_one">24</string>
    <string name="geng_duo_zi_liao_xing_zuo">星座</string>
    <string name="geng_duo_zi_liao_xing_zuo_one">摩羯座</string>
    <string name="geng_duo_zi_liao_suo_zai_di">所在地</string>
    <string name="geng_duo_zi_liao_suo_zai_di_one">巴基斯坦</string>
    <string name="geng_duo_zi_liao_you_xiang">邮箱</string>
    <string name="geng_duo_zi_liao_you_xiang_one">1092751669@qq.com</string>
    <string name="tian_jia_lv_you">添加驴友</string>
    <string name="lv_you_name_one">HFJKn</string>
    <string name="lv_you_name_two">小学生</string>
    <string name="lv_you_name_three">我都是我</string>
    <string name="lv_you_name_four">钱多多</string>
    <string name="lv_you_name__tian_jia">添加</string>
    <string name="ju_bao">举报</string>
    <string name="ju_bao_wei_shen_me">您为什么举报该账号?</string>
    <string name="ju_bao_sao_rao">垃圾消息骚扰</string>
    <string name="ju_bao_se_qing">传播色情/暴力/反动等不良信息</string>
    <string name="ju_bao_qi_za">欺诈骗钱</string>
    <string name="liao_tian">聊天</string>
    <string name="liao_tian_bei_jing">选择聊天背景</string>
    <string name="liao_tian_zi_fei">旅行资费大概是多少</string>
    <string name="liao_tian_jia_qian">差不多两千到三千</string>
    <string name="liao_tian_OK">OK</string>
    <string name="liao_tian_fa_song">发送</string>
    <string name="xiang_qing_title">详情</string>
    <string name="xiang_qing_name">不念,——TM不忘</string>
    <string name="xiang_qing_shi_jian">2016年3月10日</string>
    <string name="xiang_qing_wen_zi">我向往的爱情,不是浅薄的被表面互相吸引,因为喜欢才对对方好;我向往的爱情,是明白对方的好,才想对对方好,我向往的爱情,是相知才相爱。</string>
    <string name="xiang_qing_biao_qian">标签:</string>
    <string name="xiang_qing_nv">女</string>
    <string name="xiang_qing_cq">重庆</string>
    <string name="xiang_qing_age">18岁</string>
    <string name="xiang_qing_shcool">海口是琼台师范高等专科学校</string>
    <string name="xiang_qing_chu_fa_time">出发时间:2016年3月15日</string>
    <string name="xiang_qing_di_dian">集合地点:重庆是渝北区花卉园</string>
    <string name="xiang_qing_wu_pin">必带物品:自备自行车一辆</string>
    <string name="xiang_qing_zi_jin">旅行资金:300元——500元</string>
    <string name="xiang_qing_si_liao">私聊</string>
    <string name="xin_de_lv_you">新的驴友</string>
    <string name="xin_de_lv_you_chen">陈某某</string>
    <string name="xin_de_lv_you_chenone">2016.3.10</string>
    <string name="xin_de_lv_you_wang">王法天</string>
    <string name="xin_de_lv_you_wangone">2016.3.8</string>
    <string name="xin_de_lv_you_li">李小果</string>
    <string name="xin_de_lv_you_lione">2016.3.1</string>
    <string name="xin_de_lv_you_cheng">程存存</string>
    <string name="xin_de_lv_you_chengone">2016.2.19</string>
    <string name="liao_tian_she_zhi_title">聊天设置</string>
    <string name="liao_tian_she_zhi_name">Dfdfgr</string>
    <string name="liao_tian_she_zhi_guan_zhu">关注   41</string>
    <string name="liao_tian_she_zhi_dian_zan">263</string>
    <string name="liao_tian_she_zhi_ji_lu">聊天记录</string>
    <string name="liao_tian_she_zhi_guan_bei_jing">聊天背景</string>
    <string name="liao_tian_she_zhi_ping_bi">屏蔽此人</string>
    <string name="liao_tian_she_zhi_qing_kong">清空聊天记录</string>
    <string name="liao_tian_she_zhi_ju_bao">举报</string>
    <string name="liao_tian_she_zhi_tian_jia">加为驴友</string>
    <string name="liao_tian_she_zhi_shan_chu">删除驴友</string>
    <string name="ge_ren_zi_liao">个人资料</string>
    <string name="ge_ren_zi_liao_geng_duo">更多</string>
    <string name="ge_ren_zi_liao_xin_yu">信誉</string>
    <string name="ge_ren_zi_liao_ping_jia">评价</string>
    <string name="ge_ren_zi_liao_ping_jia_one">性格沉稳却稳重大方,在困难面前不屈不挠勇于向新的高度挑战</string>
    <string name="ge_ren_zi_liao_liao_tian">聊天</string>
    <string name="ge_ren_zi_liao_ping_jia_dong_tai">情系滇东北-穿越乌蒙山之旅</string>
    <string name="ping_jia_fen_si">粉丝    44</string>
    <string name="ping_jia_zhun_shi">准时</string>
    <string name="ping_jia_xin_yu">信誉</string>
    <string name="ping_jia">评价</string>
    <string name="ping_jia_ti_jiao">提交评价</string>
    <string name="ping_jia_one">性格沉稳却稳重大方，在困难面前不屈不闹勇于向新的高度挑战。他反反复复的发表...</string>
    <string name="ge_ren_zi_liao_dong_tai">动态</string>
    <string name="ping_jia_ren_shu">59</string>
    <string name="ping_jia_nan">Many</string>
 <string name="quxiao">取消</string>
    <string name="fayueban">发约伴</string>
    <string name="kuaifayuebanba">快发约伴吧</string>
    <string name="didian">地点</string>
    <string name="chufashijian">出发时间</string>
    <string name="jihedidian">集合地点</string>
    <string name="bidaiwupin">必带物品</string>
    <string name="lvxingzijin">旅行资金</string>
    <string name="shoujipaizhao">从手机拍照</string>
    <string name="paizhao">拍照</string>
    <string name="xuanzechengshi">选择城市</string>
    <string name="shuruchengshimingcheng">输入城市名</string>
    <string name="DangQianDingWei">当前定位</string>
    <string name="CQ">重庆</string>
    <string name="HotCity">热门城市</string>
<string name="ShangHai">上海</string>
<string name="BeiJing">北京</string>
<string name="ChengDu">成都</string>
<string name="ShenZhen">深圳</string>
<string name="HangZhou">杭州</string>
<string name="FoShan">佛山</string>
<string name="DongGuan">东莞</string>
<string name="WuXi">无锡</string>
<string name="TianJing">天津</string>
<string name="XiAn">西安</string>
<string name="NanJing">南京</string>
<string name="ChangSha">长沙</string>
<string name="A">A</string>
<string name="AnShan">鞍山</string>
<string name="AnQing">安庆</string>
<string name="ABa">阿坝</string>
<string name="AnYang">安阳</string>
<string name="yueban">约伴</string>
<string name="diqu">地区</string>
<string name="jiage">价格</string>
<string name="xingbie">性别</string>
<string name="time">时间</string>
<string name="age">年龄</string>
<string name="buwang">不念，—TM不忘</string>
<string name="date">2016年10月3日</string>
<string name="biaoqian">标签</string>
<string name="woman">女</string>
</resources>