<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical" >

    <!-- 顶栏布局 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#01B6BD" >

        <ImageView
            android:padding="9dp"
            android:id="@+id/FanHui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/fifteenDP"
            android:src="@drawable/houtui" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/xuanzechengshi"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </RelativeLayout>
    <!-- 搜索栏 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="53dp" >

        <RelativeLayout
            android:layout_width="310dp"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rectangle" >

            <ImageView
                android:id="@+id/sousuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/tenDP"
                android:src="@drawable/sousuo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="@dimen/tenDP"
                android:layout_toEndOf="@id/sousuo"
                android:background="#F6F6F6"
                android:hint="@string/shuruchengshimingcheng"
                android:inputType="textAutoComplete"
                android:textColor="#A6A6A6"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>
    <!-- 第二层布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginLeft="@dimen/twelveDP"
        android:layout_marginRight="@dimen/twelveDP"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/twelveDP"
                android:text="@string/DangQianDingWei"
                android:textColor="@color/Black"
                android:textSize="@dimen/fifteenSP" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/dangqianzuobiao"
                android:layout_width="310dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle" >

                <TextView
                    android:id="@+id/ChongQing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/CQ"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/fifteenSP" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twelveDP"
                android:layout_marginTop="@dimen/tenDP"
                android:text="@string/HotCity"
                android:textColor="@color/Black"
                android:textSize="@dimen/fifteenSP" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false" >

                <TextView
                    android:id="@+id/shanghai"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/ShangHai"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/beijing"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/shanghai"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/BeiJing"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/chengdu"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/beijing"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/ChengDu"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/shenzhen"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="@dimen/twelveDP"
                    android:layout_marginRight="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/ShenZhen"
                    android:textColor="@color/Black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/hangzhou"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/HangZhou"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/foshan"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/hangzhou"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/FoShan"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/dongguan"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/foshan"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/DongGuan"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/wuxi"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/twelveDP"
                    android:layout_marginStart="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/WuXi"
                    android:textColor="@color/Black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tianjing"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/TianJing"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/changsha"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/tianjing"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/ChangSha"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/xian"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_marginStart="@dimen/twentyfiveDP"
                    android:layout_toEndOf="@id/changsha"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/XiAn"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/nanjing"
                    android:layout_width="@dimen/fiftysevenDP"
                    android:layout_height="@dimen/twentyDP"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="@dimen/twelveDP"
                    android:layout_marginRight="@dimen/twelveDP"
                    android:background="@drawable/smallrectangle"
                    android:gravity="center"
                    android:text="@string/NanJing"
                    android:textColor="@color/Black" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/site"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/twelveDP"
        android:layout_marginRight="@dimen/twelveDP"
        android:overScrollMode="never"
        android:scrollbars="none" />

</LinearLayout>