<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HuangSe"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourteenDP" >

        <TextView
            android:id="@+id/zimu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
          android:layout_gravity="center"
            android:layout_marginStart="@dimen/twentyfiveDP"
            android:text="@string/A"
            android:textColor="@color/Black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/dizhi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/twelveDP"
            android:text="@string/AnShan"
            android:textColor="@color/Black"
            android:textSize="@dimen/fifteenSP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/dizhi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/twelveDP"
            android:text="@string/AnQing"
            android:textColor="@color/Black"
            android:textSize="@dimen/fifteenSP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/dizhi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/twelveDP"
            android:text="@string/ABa"
            android:textColor="@color/Black"
            android:textSize="@dimen/fifteenSP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/dizhi4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/twelveDP"
            android:text="@string/AnYang"
            android:textColor="@color/Black"
            android:textSize="@dimen/fifteenSP" />
    </LinearLayout>

</LinearLayout>